@@ -44,7 +44,8 @@
 * Added new global _WORKING_DIR
 * Patch 3351583: _PREMAKE_COMMAND variable (Konstantin Tokarev)
 * Patch 3451928: VS2008 trying to build *.h files in C projects
-
+* Patch 3429777: Support for DragonFly BSD (Joachim de Groot)
+* Patch 3445049: Build fix for FreeBSD (Konstantin Tokarev)
 
 -------
   4.3
